# qemu

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.objs  README.rst  VERSION  configure  qtest.c
block/: qcow2-cache.c  qcow2.c  quorum.c
crypto/: tlssession.c
default-configs/: arm-softmmu.mak
hw/arm/: Kconfig  Makefile.objs  amazfit.c  armv7m.c  it7259.c  meson.build  pebble.c  pebble.h  pebble_control.c  pebble_control.h  pebble_robert.c  pebble_silk.c  stellaris.c  stm32.c  stm32_clktree.c  stm32_exti.c  stm32_flash.c  stm32_p103.c  stm32_rcc.c  stm32f1xx.c  stm32f1xx_rcc.c  stm32f205_soc.c  stm32f2xx.c  stm32f2xx_adc.c  stm32f2xx_crc.c  stm32f2xx_dma.c  stm32f2xx_dummy.c  stm32f2xx_flash.c  stm32f2xx_gpio.c  stm32f2xx_i2c.c  stm32f2xx_pwr.c  stm32f2xx_rcc.c  stm32f2xx_rtc.c  stm32f2xx_syscfg.c  stm32f2xx_tim.c  stm32f4xx.c  stm32f7xx.c  stm32f7xx_i2c.c  stm32f7xx_lptim.c  stm32l467_soc.c  (+11 more)
hw/block/: Makefile.objs  m25p80.c  mt25q.c  mx25u.c  pflash_jedec_424.c
hw/char/: Makefile.objs  stm32_uart.c  stm32f7xx_uart.c
hw/core/: irq.c  qdev.c
hw/display/: Makefile.objs  jdi-lpm013m126c.c  ls013b7dh01.c  meson.build
hw/gpio/: Makefile.objs  stm32_afio.c  stm32_exti.c  stm32_gpio.c
hw/i386/: pc.c  pc_piix.c
hw/ide/: ahci.c
hw/intc/: arm_gic.c  armv7m_nvic.c
hw/net/: vmxnet3.c
hw/ssi/: Makefile.objs  stm32f2xx_spi.c  stm32f2xx_spi_pbl.c  stm32f412_qspi.c
include/hw/: irq.h  qdev-core.h  sysbus.h
tests/qemu-iotests/: 061.out  067.out  071.out  087.out
ui/: cocoa.m  gtk.c  sdl2.c  vnc-ws.c
util/: qemu-thread-posix.c
(+20 files in other folders)
